fix: ready to push! delete last console.log() realign messages bubbles

--- a/front-end/src/components/Message/Message/Message.scoped.css
+++ b/front-end/src/components/Message/Message/Message.scoped.css
@@ -31,11 +31,12 @@
 }
 
 .message-received {
+  text-align: right;
   background-color: var(--primary-light);
 }
 
 .message-sended {
-  text-align: right;
+  text-align: left;
   margin-left: 2em;
   background-color: var(--primary-dark);
 }
